--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@
  before_script:
          - sudo apt update
          - sudo apt install libspdlog-dev -y
+         - sudo apt install libboost-all-dev -y
          - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 379CE192D401AB61
  script:
          - cmake .
